height: auto to avoid cut off of "y" in "Days"

--- a/css/site.css
+++ b/css/site.css
@@ -98,6 +98,7 @@ h2, p {
 
 h2 select {
   width: auto;
+  height: auto;
   border: 0;
   background: transparent;
   color: black;
